--- a/style.css
+++ b/style.css
@@ -1930,6 +1930,8 @@ body div.slideshow-window * img {
 @media screen and ( max-width: 800px ) {
 	#content div.sharedaddy iframe, #main div.sharedaddy iframe, div.sharedaddy iframe {
 		margin-left: 30px;
+		max-width: 200px;
+		display: block;
 	}
 	.sharedaddy.sd-sharing-enabled div.sd-content {
 		margin-left: 20px;
