--- a/style.css
+++ b/style.css
@@ -1948,3 +1948,7 @@ body {
 	background-position: 0 750px;
 	background-size: contain;
 }
+article.post-19 > .entry-content > ol {
+	list-style: none;
+	list-style-type: none;
+}
