fix header bg image
fix header bg image

--- a/style.css
+++ b/style.css
@@ -1985,5 +1985,5 @@ article.post-19 > .entry-content > ol {
 	}
 }
 .custom-header {
-	background-position: center right;
+	background-position: 70% center;
 }
