fix article top padding
fix article top padding

--- a/style.css
+++ b/style.css
@@ -1987,3 +1987,6 @@ article.post-19 > .entry-content > ol {
 .custom-header {
 	background-position: 70% center;
 }
+article.post {
+	padding-top: 48px;
+}
