--- a/style.css
+++ b/style.css
@@ -1678,11 +1678,11 @@ body.error404 .search-form input {
 	margin-bottom: 60px;
 }
 .site-info {
-	padding: 0 0 30px;
+	padding: 30px 0 30px 0;
 	text-align: center;
 	font-size: 16px;
 	font-size: 1.6rem;
-	margin-top: 40px;
+	background-color: #fff;
 }
 .site-info a {
 	color: #1d215f;
