--- a/style.css
+++ b/style.css
@@ -1879,9 +1879,9 @@ body div.slideshow-window * img {
 	#header-navigation {
 		position: fixed;
 		z-index: 99999;
-		box-shadow: 0px 1px 10px #ccc;
-		-webkit-box-shadow: 0px 1px 10px #ccc;/* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
-		-moz-box-shadow:    0px 1px 10px #ccc; /* Firefox 3.5 - 3.6 */
+		box-shadow: 0 8px 6px -6px #999
+		-webkit-box-shadow: 0 8px 6px -6px #999/* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+		-moz-box-shadow: 0 8px 6px -6px #999 /* Firefox 3.5 - 3.6 */
 	}
 }
 @media screen and (max-width: 880px) {
