--- a/style.css
+++ b/style.css
@@ -47,13 +47,16 @@
 /**************************
 		 @media
 ***************************/
+@media screen and (max-width: 820px){
+	body{
+		background:none!important;
+	}
+}
 @media screen and (max-width: 820px) {
 	.entry-content p {
 		margin-left: 30px;
 		margin-right: 30px;
 	}
-	#masthead::before,
-	#masthead::after,
 	.textwidget.custom-html-widget img {
 		display: none!important;
 	}
