--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
 ***************************/
 @media screen and (max-width: 820px){
 	body{
-		background:none!important;
+		background-image:none!important;
 	}
 }
 @media screen and (max-width: 820px) {
