--- a/style.css
+++ b/style.css
@@ -1606,9 +1606,10 @@ body.error404 .search-form input {
 }
 .comments-title,
 .comment-reply-title {
-	margin: 40px 0;
+	margin: 65px 0 55px 15px;
 	font-size: 28px;
 	font-size: 2.8rem;
+	
 }
 .comment-list {
 	list-style: none;
