add background color to comment reply link

--- a/style.css
+++ b/style.css
@@ -1649,7 +1649,7 @@ body.error404 .search-form input {
 	text-align: center;
 	text-decoration: none;
 	color: rgba(255, 255, 255, 1);
-	background:rgba(29, 33, 95, 1);
+	background:rgba(40,38,122,1);
 	font-size: 16px;
 	font-size: 1.6rem;
 	text-transform: uppercase;
