--- a/style.css
+++ b/style.css
@@ -791,9 +791,11 @@ input[type="password"]:focus,
 input[type="search"]:focus,
 select:focus,
 textarea:focus {
+	/*
 	outline: 2px solid rgba(29, 33, 95, 0.6);
 	-webkit-box-shadow: inset 0 2px 3px 0 rgba(0, 0, 0, 0.15);
 	box-shadow: inset 0 2px 3px 0 rgba(0, 0, 0, 0.15);
+	*/
 }
 input[type="text"],
 input[type="email"],
