add border to form hover and focus

--- a/style.css
+++ b/style.css
@@ -628,7 +628,7 @@ Subscribe Widgets
 #subscribe-submit input:hover {
 	background-color: rgba(255, 255, 255, 1);
 	color: rgba(40, 38, 122, 1);
-	border: 4px solid #1d1c65;
+	border: 4px solid rgba(29, 28, 101, 1);
 }
 /***********************
 Social Media Widgets
@@ -790,13 +790,17 @@ input[type="url"]:focus,
 input[type="password"]:focus,
 input[type="search"]:focus,
 select:focus,
-textarea:focus {
-	/*
-	outline: 2px solid rgba(29, 33, 95, 0.6);
-	-webkit-box-shadow: inset 0 2px 3px 0 rgba(0, 0, 0, 0.15);
-	box-shadow: inset 0 2px 3px 0 rgba(0, 0, 0, 0.15);
-	*/
+textarea:focus,
+input[type="text"]:hover,
+input[type="url"]:hover,
+input[type="password"]:hover,
+input[type="search"]:hover,
+select:hover,
+textarea:hover{
+	border:1px solid rgba(40,38,122,1);
 }
+
+
 input[type="text"],
 input[type="email"],
 input[type="url"],
