--- a/style.css
+++ b/style.css
@@ -738,12 +738,15 @@ textarea {
 	color: rgba(29, 33, 95, 1);
 	background: rgba(255, 255, 255, 1);
 	border: 1px solid #c9ccdd;
-	border-radius: 2px;
 	-webkit-box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.15);
 	box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.15);
 	border-radius: 25px;
 	-webkit-border-radius: 25px;
 	-moz-border-radius: 25px;
+	-moz-transition: all .3s ease;
+	-o-transition: all .3s ease;
+	-webkit-transition: all .3s ease;
+	transition: all .3s ease;
 }
 input[type="text"] ::-webkit-input-placeholder,
 input[type="email"] ::-webkit-input-placeholder,
