--- a/style.css
+++ b/style.css
@@ -169,7 +169,9 @@
 /**************************
 			Comments
 ***************************/
-
+h3#reply-title{
+	margin:0;
+}
 p.comment-notes {
 	font-size: 16px;
 	font-size:1.6rem;
@@ -1629,7 +1631,7 @@ body.error404 .search-form input {
 }
 .comments-title,
 .comment-reply-title {
-	margin: 65px 0 55px 15px;
+	margin: 65px 0 5px 15px;
 	font-size: 28px;
 	font-size: 2.8rem;
 	
