add opacity to notes

--- a/style.css
+++ b/style.css
@@ -175,6 +175,7 @@ h3#reply-title{
 p.comment-notes {
 	font-size: 16px;
 	font-size:1.6rem;
+	opacity: 0.75;
 }
 p.form-submit{
 	padding:20px 0 25px 0;
