--- a/style.css
+++ b/style.css
@@ -802,9 +802,7 @@ input[type="password"]:hover,
 input[type="search"]:hover,
 select:hover,
 textarea:hover{
-	border-style:solid;
-    border-color:rgba(40,38,122,1);
-	border-width:2px;
+	border: 2px solid rgba(40,38,122,1);
 	outline:none;
 }
 
