--- a/style.css
+++ b/style.css
@@ -823,6 +823,7 @@ textarea {
 	padding: 10px 20px 8px;
 	width: 100%;
 	line-height: 1.5;
+	border-width: 2px;
 	border-radius:25px;
 	-webkit-border-radius: 25px;
 	-moz-border-radius: 25px;
