--- a/style.css
+++ b/style.css
@@ -2011,10 +2011,10 @@ article.post-19 > .entry-content > ol {
 	.page-navigation-container li:hover a, .page-navigation-container li.focus a {
 		color: rgba(40,38,122,1);
 	}
-	p.site-title a {
+	body:not(.home) p.site-title a {
 		font-size: 3.5rem;
 		}
-	p.site-description {
+	body:not(.home) p.site-description {
 		font-size: 1.4rem;
 		}
 }
