button remve .article

--- a/style.css
+++ b/style.css
@@ -2084,10 +2084,10 @@ img.aligncenter{
 	margin:0 auto;
 }
 
-#main .article button{
+#main article button{
 	border-radius:0px;
 }
-#main .article button a{
+#main article button a{
 	color:#fff;
 	text-decoration: none
 }
