--- a/style.css
+++ b/style.css
@@ -2086,6 +2086,7 @@ img.aligncenter{
 
 #main article button{
 	display: block;
+	margin: 0 auto;
 	border: 4px solid #fff;
     -moz-transition: all .3s ease;
     -o-transition: all .3s ease;
@@ -2106,4 +2107,6 @@ img.aligncenter{
 }
 #main article button:hover a{
 	color: #28267a;
+	background-color:transparent;
+	text-decoration: none;
 }
