--- a/style.css
+++ b/style.css
@@ -2107,6 +2107,6 @@ img.aligncenter{
 }
 #main article button:hover a{
 	color: #28267a;
-	background-color:transparent;
+	background-image:none;
 	text-decoration: none;
 }
