--- a/style.css
+++ b/style.css
@@ -2086,7 +2086,7 @@ img.aligncenter{
 
 #main article button{
 	display: block;
-	margin: 0 auto;
+	margin: 2.438em auto 2.438em auto;
 	border: 4px solid #fff;
     -moz-transition: all .3s ease;
     -o-transition: all .3s ease;
@@ -2102,6 +2102,7 @@ img.aligncenter{
 	margin: 0 auto;
 }
 #main article button:hover{
+	color:#28267a;
 	border: 4px solid #28267a;
 	background-color: #fff;
 }
@@ -2112,3 +2113,4 @@ img.aligncenter{
 }
 #main article .entry-content img.size-full {
     width: auto;
+}
