--- a/style.css
+++ b/style.css
@@ -493,7 +493,7 @@ a.btn.btn-info span::after {
 	width: auto!important;
 	padding: 25px 25px 5px 55px!important;
 }
-.sponsor-level.gold-sponsors a:nth-child(3) img{
+#footer-widget-2 .sponsor-level.gold-sponsors a:nth-child(3) img{
 	max-height: 110px!important;
 }
 
