--- a/style.css
+++ b/style.css
@@ -493,10 +493,11 @@ a.btn.btn-info span::after {
 	width: auto!important;
 	padding: 25px 25px 5px 55px!important;
 }
-#footer-widget-2 .sponsor-level.gold-sponsors a:nth-child(4) img{
-	max-height: 110px!important;
+@media screen and (min-width: 1100px){
+	#footer-widget-2 .sponsor-level.gold-sponsors a:nth-child(4) img{
+		max-height: 110px!important;
+	}
 }
-
 #wcb_sponsors-2 .widget-title {
 	font-weight: 700;
 }
