fix logo in mobile

--- a/style.css
+++ b/style.css
@@ -498,6 +498,11 @@ a.btn.btn-info span::after {
 		max-height: 110px!important;
 	}
 }
+@media screen and (max-width: 600px){
+	#footer-widget-2 .wcb_widget_sponsors .sponsor-logo img {
+	float: unset;
+	}
+}
 #wcb_sponsors-2 .widget-title {
 	font-weight: 700;
 }
