--- a/style.css
+++ b/style.css
@@ -493,6 +493,7 @@ a.btn.btn-info span::after {
 	width: auto!important;
 	padding: 25px 25px 5px 55px!important;
 }
+*/ keep it clear */
 @media screen and (min-width: 1100px){
 	#footer-widget-2 .sponsor-level.gold-sponsors a:nth-child(4) img{
 		max-height: 110px!important;
