--- a/style.css
+++ b/style.css
@@ -503,7 +503,7 @@ a.btn.btn-info span::after {
 	footer #footer-widget-2 .wcb_widget_sponsors .sponsor-logo img {
 	float: unset;
 	}
-
+}
 #wcb_sponsors-2 .widget-title {
 	font-weight: 700;
 }
