--- a/style.css
+++ b/style.css
@@ -499,6 +499,12 @@ a.btn.btn-info span::after {
 		max-height: 110px!important;
 	}
 }
+@media screen and (max-width: 1100px) and (min-width: 600px){
+.wcb_widget_sponsors .sponsor-logo img {
+    height: auto !important;
+    max-height: 70px !important;
+}
+
 @media screen and (max-width: 600px){
 	footer #footer-widget-2 .wcb_widget_sponsors .sponsor-logo img {
 	float: unset;
