loggedin test mobile menu text

--- a/style.css
+++ b/style.css
@@ -2135,11 +2135,11 @@ img.aligncenter{
 }
 
 @media screen and (max-width: 880px){
-	.logged-in  #header-navigation button {
+	.logged-in  #header-navigation button.menu-toggle {
 		visibility: hidden;
 	}
-	.logged-in #header-navigation button:before {
-	content: 'This is new content, replacing existing content';
+	.logged-in #header-navigation button.menu-toggle:before {
+	content: 'Main Menu';
 	visibility:visible;
 	}
 }
