--- a/style.css
+++ b/style.css
@@ -2142,6 +2142,8 @@ img.aligncenter{
 	content: 'Main Menu';
 	visibility:visible;
 	display: inline-block;
-    width: 100%;
+	width: 100%;
+	top: 10px;
+    position: relative;
 	}
 }
