table select css

--- a/style.css
+++ b/style.css
@@ -703,6 +703,12 @@ img.business-sponsor{
 }
 
 /***********************
+Tickets 
+***********************/
+table .tix_tickets_table td.tix-column-quantity select{
+width:85px!important;
+}
+/***********************
 <---- END HERE ------->
 ***********************/
 * {
