change the post to page

--- a/style.css
+++ b/style.css
@@ -2200,8 +2200,8 @@ img.aligncenter{
 		position: relative; */
 	}
 }
-.postid-845 #footer-widget-1,
-.postid-268 #footer-widget-1,
+.pageid-845 #footer-widget-1,
+.pageid-268 #footer-widget-1,
 .postid-510 #footer-widget-1{
 	display:none;
 }
