--- a/style.css
+++ b/style.css
@@ -2200,8 +2200,8 @@ img.aligncenter{
 		position: relative; */
 	}
 }
-.pageid-845 #footer-widget-1,
-.pageid-268 #footer-widget-1,
+.page-id-845 #footer-widget-1,
+.page-id-268 #footer-widget-1,
 .postid-510 #footer-widget-1{
 	display:none;
 }
