--- a/style.css
+++ b/style.css
@@ -49,12 +49,14 @@
 /**************************
 		 @media
 ***************************/
-@media screen and (max-width: 820px){
+
+@media screen and (max-width: 820px) {
+	table, thead, tbody, th, td, tr { 
+		display: block; 
+	}
 	body{
 		background-image:none!important;
 	}
-}
-@media screen and (max-width: 820px) {
 	.entry-content p {
 		margin-left: 30px;
 		margin-right: 30px;
