--- a/style.css
+++ b/style.css
@@ -51,9 +51,40 @@
 ***************************/
 
 @media screen and (max-width: 820px) {
+	table {
+		width:100%;
+	}
 	table, thead, tbody, th, td, tr { 
 		display: block; 
 	}
+	thead tr { 
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+	
+	tr { border: 1px solid #ccc; }
+	
+	td { 
+		border: none;
+		border-bottom: 1px solid #eee; 
+		position: relative;
+		padding-left: 50%; 
+	}
+
+	td:before { 
+		position: absolute;
+		top: 6px;
+		left: 6px;
+		width: 45%; 
+		padding-right: 10px; 
+		white-space: nowrap;
+		content: attr(data-column);
+
+		color: #000;
+		font-weight: bold;
+	}
+
 	body{
 		background-image:none!important;
 	}
