--- a/style.css
+++ b/style.css
@@ -57,7 +57,11 @@
 	table, thead, tbody, th, td, tr { 
 		display: block; 
 	}
-	
+	thead tr { 
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
 
 	body{
 		background-image:none!important;
