--- a/style.css
+++ b/style.css
@@ -54,8 +54,11 @@
 	table {
 		width:100%;
 	}
+	.tix_tickets_table .tix-column-price, .tix_tickets_table .tix-column-quantity, .tix-ticket-form .tix-column-price, .tix-ticket-form .tix-column-quantity{
+		width:0;
+	}
 	table, thead, tbody, th, td, tr { 
-		display: block; 
+		display: inline-block; 
 	}
 	thead tr { 
 		position: absolute;
