--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@
 		width:100%;
 	}
 	.tix_tickets_table .tix-column-price, .tix_tickets_table .tix-column-quantity, .tix-ticket-form .tix-column-price, .tix-ticket-form .tix-column-quantity{
-		width:0;
+		width:0!important;
 	}
 	table, thead, tbody, th, td, tr { 
 		display: inline-block; 
