replace the margin with padding

--- a/style.css
+++ b/style.css
@@ -728,7 +728,7 @@ table.tix_tickets_table tbody tr td{
 
 table.tix_tickets_table {
     position: relative;
-    margin: 23px 15px 46px 15px;
+    padding: 15px 15px 46px 15px;
 }
 table.tix_tickets_table td.tix-column-quantity select{
 width:85px!important;
